[gd_scene load_steps=6 format=3 uid="uid://dyvte65a1ass5"]

[ext_resource type="PackedScene" uid="uid://driafb1iw3m77" path="res://Components/Test/test_camera.tscn" id="1_2uuqq"]
[ext_resource type="Script" path="res://Scenes/salva/salva_test.gd" id="1_qs8e2"]
[ext_resource type="PackedScene" uid="uid://vacta1kkdrr8" path="res://Components/Map/WorldMap/world_map.tscn" id="2_2ll5o"]
[ext_resource type="PackedScene" uid="uid://gjipc6fyqt0p" path="res://Components/Test/test_player.tscn" id="3_f56qa"]
[ext_resource type="PackedScene" uid="uid://bjk64vjmrv2yj" path="res://UI/ArmyMenu/army_menu.tscn" id="5_tm571"]

[node name="salva_test" type="Node2D"]
script = ExtResource("1_qs8e2")

[node name="test_camera" parent="." instance=ExtResource("1_2uuqq")]
position = Vector2(643, 365)
zoom = Vector2(1, 1)

[node name="WorldMap" parent="." instance=ExtResource("2_2ll5o")]
position = Vector2(0, 0)

[node name="Armies" type="Node2D" parent="."]

[node name="TestPlayerPlain" parent="Armies" instance=ExtResource("3_f56qa")]
position = Vector2(165, 108)

[node name="TestPlayerMountain" parent="Armies" instance=ExtResource("3_f56qa")]
position = Vector2(323, 113)
can_mountain = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ArmyMenu" parent="UI" instance=ExtResource("5_tm571")]
visible = false

[connection signal="sig_point_touched" from="WorldMap" to="." method="_on_world_map_sig_point_touched"]
[connection signal="sig_army_deselected" from="Armies/TestPlayerPlain" to="." method="_on_sig_army_deselected"]
[connection signal="sig_army_selected" from="Armies/TestPlayerPlain" to="." method="_on_sig_army_selected"]
[connection signal="sig_army_deselected" from="Armies/TestPlayerMountain" to="." method="_on_sig_army_deselected"]
[connection signal="sig_army_selected" from="Armies/TestPlayerMountain" to="." method="_on_sig_army_selected"]
